# telegram-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: config.py  settings.py
docs/: evaluation-design.md  progress.md  roadmap.md  session-2026-05-14.md
eval/: langsmith_runner.py  rag_layer_smoke.py  replay_runner.py  retrieval_probe_runner.py  retrieval_strategy_lab_runner.py  runner.py
evaluation/: __init__.py  consolidation.py  conversation_logger.py  dataset_builder.py  metrics.py  mock_conversation_generator.py  seed_memory.py
infra/: deploy_ubuntu.sh  docker_keepalive.sh  healthcheck_telegram.py
memory/: bootstrap.py  embedder.py  engine.py  hyde_enhancer.py  ingestion.py  markdown_store.py  markdown_vector_sync.py  optimizer.py  retriever.py  runtime.py  store.py
persistence/: database.py  session_store.py
proactive_v2/: __init__.py  agent_tick.py  gateway.py  loop.py
tests/: test_after_phases.py  test_before_reasoning.py  test_before_turn.py  test_consolidation_e2e.py  test_consolidation_integration.py  test_consolidation_worker.py  test_conversation_logger.py  test_database.py  test_dataset_builder.py  test_embedder.py  test_event_bus.py  test_invalidation_worker.py  test_longmemeval_conversion.py  test_markdown_memory.py  test_markdown_vector_sync.py  test_memory_engine_retrieval.py  test_memory_optimizer.py  test_memory_store.py  test_metrics.py  test_pipeline_integration.py  test_plugins.py  test_proactive_chain.py  test_real_embedder.py  test_reasoner.py  (+4 more)
(+49 files in other folders)
