[tool.poetry]
package-mode = false
name = "telegram-bot-mvp"
version = "0.1.0"
description = "A Telegram bot with AI agent capabilities and vector memory"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.0"
openai = "^1.0"
numpy = "^1.26"
sqlite-vec = "^0.1"
pydantic = "^2.0"
pydantic-settings = "^2.0"
langsmith = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
